Update: Data Augmentation

--- a/Kapampangan-to-English NLLB-200.ipynb
+++ b/Kapampangan-to-English NLLB-200.ipynb
@@ -10,27 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "fbb73aaa",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\PC\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\torchvision\\io\\image.py:13: UserWarning: Failed to load image Python extension: '[WinError 127] The specified procedure could not be found'If you don't plan on using image functionality from `torchvision.io`, you can ignore this warning. Otherwise, there might be something wrong with your environment. Did you have `libjpeg` or `libpng` installed before building `torchvision` from source?\n",
-      "  warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From C:\\Users\\PC\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\tf_keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from datasets import Dataset\n",
@@ -57,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ec6a97df",
    "metadata": {},
    "outputs": [],
@@ -103,18 +86,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "8cf75adf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['kapampangan', 'english'], dtype='object')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -132,79 +107,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "0206e139",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>src_text</th>\n",
-       "      <th>tgt_text</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>sopan yu ku!</td>\n",
-       "      <td>help!</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>tuto?</td>\n",
-       "      <td>really?</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>kutnan me.</td>\n",
-       "      <td>ask him.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>mako ka ken.</td>\n",
-       "      <td>go away.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>yaku man.</td>\n",
-       "      <td>me, too.</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       src_text  tgt_text\n",
-       "0  sopan yu ku!     help!\n",
-       "1         tuto?   really?\n",
-       "2    kutnan me.  ask him.\n",
-       "3  mako ka ken.  go away.\n",
-       "4     yaku man.  me, too."
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.read_csv(CSV_PATH)\n",
     "df = df.rename(columns={\"kapampangan\": \"src_text\", \"english\": \"tgt_text\"})\n",
@@ -222,22 +128,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "db28d226",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'nltk'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      2\u001b[39m dataset = dataset.train_test_split(test_size=\u001b[32m0.2\u001b[39m, seed=\u001b[32m42\u001b[39m)\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mrandom\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnltk\u001b[39;00m\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnltk\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcorpus\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m wordnet\n\u001b[32m      8\u001b[39m nltk.download(\u001b[33m\"\u001b[39m\u001b[33mwordnet\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'nltk'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dataset = Dataset.from_pandas(df[[\"src_text\", \"tgt_text\"]])\n",
     "dataset = dataset.train_test_split(test_size=0.2, seed=42)\n",
@@ -249,7 +143,8 @@
     "nltk.download(\"wordnet\")\n",
     "nltk.download(\"omw-1.4\")\n",
     "\n",
-    "def synonym_replacement_en(text, prob=0.1):\n",
+    "def synonym_replacement_en(text, prob=0.05):\n",
+    "    \"\"\"Replace English words with synonyms (low probability).\"\"\"\n",
     "    words = text.split()\n",
     "    new_words = []\n",
     "    for w in words:\n",
@@ -262,7 +157,8 @@
     "        new_words.append(w)\n",
     "    return \" \".join(new_words)\n",
     "\n",
-    "def noise_injection_kap(text, prob=0.02):\n",
+    "def noise_injection_kap(text, prob=0.01):\n",
+    "    \"\"\"Simulate ASR spelling noise by swapping/deleting/inserting chars.\"\"\"\n",
     "    chars = list(text)\n",
     "    for i in range(len(chars)):\n",
     "        if random.random() < prob:\n",
@@ -275,29 +171,21 @@
     "                chars[i] = chars[i] + random.choice(\"aeiou\")\n",
     "    return \"\".join(chars)\n",
     "\n",
-    "def word_dropout(text, prob=0.05):\n",
+    "def word_dropout(text, prob=0.02):\n",
+    "    \"\"\"Randomly drop words to mimic ASR omissions.\"\"\"\n",
     "    words = text.split()\n",
     "    return \" \".join([w for w in words if random.random() > prob])\n",
     "\n",
     "def augment_pair(src, tgt):\n",
-    "    src = noise_injection_kap(src, prob=0.02)\n",
-    "    src = word_dropout(src, prob=0.05)\n",
+    "    # Source-side: ASR-like errors\n",
+    "    src = noise_injection_kap(src, prob=0.01)\n",
+    "    src = word_dropout(src, prob=0.02)\n",
+    "    \n",
+    "    # Target-side: synonym variation\n",
     "    tgt = synonym_replacement_en(tgt, prob=0.05)\n",
+    "    \n",
     "    return src, tgt\n",
     "\n",
-    "def augment_dataset(dataset, multiplier=2):\n",
-    "    augmented = {\"src_text\": [], \"tgt_text\": []}\n",
-    "    for ex in dataset:\n",
-    "        src, tgt = ex[\"src_text\"], ex[\"tgt_text\"]\n",
-    "        # keep original\n",
-    "        augmented[\"src_text\"].append(src)\n",
-    "        augmented[\"tgt_text\"].append(tgt)\n",
-    "        # add augmented samples\n",
-    "        for _ in range(multiplier):\n",
-    "            new_src, new_tgt = augment_pair(src, tgt)\n",
-    "            augmented[\"src_text\"].append(new_src)\n",
-    "            augmented[\"tgt_text\"].append(new_tgt)\n",
-    "    return Dataset.from_dict(augmented)\n",
     "\n",
     "# Only augment training set\n",
     "dataset[\"train\"] = augment_dataset(dataset[\"train\"], multiplier=2)"
