Updated: NLLB base and online vers

--- a/Kapampangan-to-English NLLB-200_Base.ipynb
+++ b/Kapampangan-to-English NLLB-200_Base.ipynb
@@ -46,7 +46,7 @@
    "outputs": [],
    "source": [
     "CSV_PATH = \"data/kapampangan_english.csv\"\n",
-    "MODEL_NAME = \"facebook/nllb-200-distilled-1.3B\"\n",
+    "MODEL_NAME = \"facebook/nllb-200-distilled-600M\"\n",
     "MODEL_DIR = \"./kapampangan_mt_nllb\"\n",
     "\n",
     "SPECIAL_SRC_TOKEN = \"<kap>\"\n",
